# CrashReporter

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/wangxingxing/crashreporter/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/breakpad/: CMakeLists.txt
app/src/main/java/com/wangxingxing/crashreporter/: App.kt  CrashReport.kt  JavaCrashHandler.kt  MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/wangxingxing/crashreporter/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
